# CMakeList.txt : CMake project for Enigma, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.9)

# Add source to this project's executable.
include_directories(${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
include_directories("${PROJECT_SOURCE_DIR}/Common")
include_directories("${PROJECT_SOURCE_DIR}/gpu")

add_executable (Enigma "Enigma.cpp")
add_executable (Arena "Arena.cpp")
add_executable (Linear "Linear.cpp")
add_executable (LinearM "LinearM.cpp")
add_executable (LinearE "LinearE.cpp")
add_executable (LetterCount "letter_count.cpp")
add_executable (Arena2 "arena2.cpp")
add_executable (ioc "ioc.cpp")
add_executable (make_bgtg "make_bgtg.cpp")
add_executable (arena3 "arena3.cpp")
add_executable (arena4 "arena4.cpp")
if(CMAKE_CUDA_COMPILER)
	add_executable (arena5 "arena5.cpp")
endif()
add_executable (ban "ban.cpp")

if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
	include(${TBB_ROOT}/cmake/TBBBuild.cmake)
	target_link_libraries(Enigma Common ${TBB_IMPORTED_TARGETS})
	target_link_libraries(Arena Common ${TBB_IMPORTED_TARGETS})
	target_link_libraries(Arena2 Common ${TBB_IMPORTED_TARGETS})
	target_link_libraries(arena3 Common ${TBB_IMPORTED_TARGETS})
	target_link_libraries(arena4 Common ${TBB_IMPORTED_TARGETS})
	if(CMAKE_CUDA_COMPILER)
		target_link_libraries(arena5 Common gpu ${TBB_IMPORTED_TARGETS})
	endif()
	target_link_libraries(Linear Common ${TBB_IMPORTED_TARGETS})
	target_link_libraries(LinearM Common ${TBB_IMPORTED_TARGETS})
	target_link_libraries(LinearE Common ${TBB_IMPORTED_TARGETS})
	target_link_libraries(ioc Common ${TBB_IMPORTED_TARGETS})
	target_link_libraries(make_bgtg Common ${TBB_IMPORTED_TARGETS})
	target_link_libraries(ban Common ${TBB_IMPORTED_TARGETS})
else()
	target_link_libraries(Enigma Common)
	target_link_libraries(Arena Common)
	target_link_libraries(Arena2 Common)
	target_link_libraries(arena3 Common)
	target_link_libraries(arena4 Common)
if(CMAKE_CUDA_COMPILER)
		target_link_libraries(arena5 Common gpu)
endif()
	target_link_libraries(Linear Common)
	target_link_libraries(LinearM Common)
	target_link_libraries(LinearE Common)
	target_link_libraries(ioc Common)
	target_link_libraries(make_bgtg Common)
	target_link_libraries(ban Common)
endif()

#install(TARGETS Enigma Arena DESTINATION d:/projects/enigmachallenge)
